Adding dutch option in config-time.html

--- a/config-time.html
+++ b/config-time.html
@@ -25,7 +25,7 @@
               <option value="german">Deutsch</option>
               <option value="italian">Italiano</option>
               <option value="portuguese">Portugu&ecirc;s</option>
-
+              <option value="dutch">Dutch</option>
             </select>
 	      </div>
 
